bitfields/tests/compile_error_cases/errors/bitfield_from_trait_bitfield_to_data_type_disabled.stderr
error[E0277]: the trait bound `u64: From<Bitfield>` is not satisfied
  --> tests/compile_error_cases/errors/bitfield_from_trait_bitfield_to_data_type_disabled.rs:13:21
   |
13 |     let _val: u64 = u64::from(bitfield);
   |                     ^^^ the trait `From<Bitfield>` is not implemented for `u64`
   |
   = help: the following other types implement trait `From<T>`:
             `u64` implements `From<bool>`
             `u64` implements `From<char>`
             `u64` implements `From<std::ascii::Char>`
             `u64` implements `From<u16>`
             `u64` implements `From<u32>`
             `u64` implements `From<u8>`
